--- a/package.json
+++ b/package.json
@@ -8,10 +8,12 @@
   "dependencies": {
     "autoprefixer-stylus": "^0.1.0",
     "body-parser": "~1.0.0",
+    "consolidate": "^0.10.0",
     "cookie-parser": "~1.0.1",
     "debug": "~0.7.4",
+    "dustjs-helpers": "^1.2.0",
+    "dustjs-linkedin": "^2.3.5",
     "express": "~4.2.0",
-    "express-dust": "^0.1.5",
     "jade": "~1.3.0",
     "jeet": "^5.2.10",
     "morgan": "~1.0.0",
